fixed the nav-pill behind some elements and ajusted the social-profiles links and profile photo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -294,6 +294,9 @@ section {
         grid-template-columns: 1fr;
         grid-template-rows: 5vh 95vh;
     }
+    .navbar {
+        z-index: 6;
+    }
     .resume-header {
         grid-column: 1;
         grid-row: 1 / 2;
